fix(registration and other)

--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "formik": "^2.2.9",
     "graphql-request": "^5.2.0",
     "graphql-yoga": "^3.7.3",
-    "next": "13.2.4",
+    "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-notifications": "^1.7.4",
     "react-toastify": "^9.1.1",
     "typescript": "5.0.2",
