--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "graphql-request": "^5.2.0",
+    "lucide-react": "^0.473.0",
     "next": "^13.5.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-notifications": "^1.7.4",
     "react-toastify": "^9.1.1",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
     "typescript": "5.0.2"
   },
   "devDependencies": {
@@ -37,6 +41,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.14",
     "encoding": "^0.1.13",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
