--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^12.0.6",
     "graphql-request": "^5.2.0",
     "lucide-react": "^0.473.0",
     "next": "^13.5.8",
