--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.0.11",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^12.0.6",
@@ -28,7 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-notifications": "^1.7.4",
-    "react-toastify": "^9.1.1",
+    "react-toastify": "^9.1.3",
     "react-tsparticles": "^2.12.2",
     "tailwindcss-animate": "^1.0.7",
     "tsparticles-engine": "^2.12.0",
